--- a/index.mdx
+++ b/index.mdx
@@ -15,7 +15,15 @@ description: "Welcome to the home of your new documentation"
 />
 
 ## Setting up
-
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/4KzFe50RQkQ"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 The first step to world-class documentation is setting up your editing environments.
 
 <CardGroup cols={2}>
