--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -13,10 +13,10 @@ Learn how to update your docs locally and deploy them to the public.
   src="https://static-dev.cognigy.ai/webrtc/?token=76d7a4684908647df3fb41e81aa2ecc8704acd2486ae7e542d1f71d9c1e75acd"
   width="400"
   height="600"
-  style="border: none;"
+  style={{ border: "none" }}
   allow="camera; microphone"
   title="WebRTC Widget"
-></iframe>
+/>
 
 <AccordionGroup>
   <Accordion icon="github" title="Clone your docs locally">
